--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@ h2.fancy {
   transform: rotateZ(-2deg);
   display: block;
   margin: 15px auto;
-  width: 280px;
+  max-width: 280px;
   text-align: center;
   -webkit-box-shadow: 1px 2px 17px -3px rgba(0,0,0,0.47);
   -moz-box-shadow: 1px 2px 17px -3px rgba(0,0,0,0.47);
@@ -130,14 +130,12 @@ hr {
   position: relative;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .images img {
   max-width: 360px;
   max-height: 270px;
-  width: 48%;
-  height: 48%;
   padding-bottom: 20px;
 }
 
